package com.directi.training.ocp.exercice_refactored;

public class SpaceResource implements IResource{
    @Override
    public int findFree() {
        return 0;
    }

    @Override
    public void markBusy(int resourceId) {

    }

    @Override
    public void markFree(int resourceId) {

    }
}
