@startuml
'https://plantuml.com/class-diagram

interface IResource
class TimeResource
class SpaceResource
class ResourceAllocator

interface IResource{
findFree() : Integer
markBusy(resourceId : Integer) : void
markFree(resourceId : Integer) : void
}

class SpaceResource{
+ findFree() : Integer
+ markBusy(resourceId : Integer) : void
+ markFree(resourceId : Integer) : void
}

class TimeResource{
+ findFree() : Integer
+ markBusy(resourceId : Integer) : void
+ markFree(resourceId : Integer) : void
}

class ResourceAllocator{
+ allocate(resource : IResource) : Integer
+ free(resource : IResource, resourceId : Integer) : void
}

SpaceResource ..|> IResource
TimeResource ..|> IResource

ResourceAllocator ..> IResource

@enduml